--- a/html/about.html
+++ b/html/about.html
@@ -103,7 +103,7 @@
             <li><b>Age:</b> 25</li>
             <li><b>Gender:</b> Male</li>
           </ul>
-          <a href="/assets/CV.pdf"> <button class="btn btn-theme-outline">Download CV</button>
+          <a href="../assets/CV.pdf"> <button class="btn btn-theme-outline">Download CV</button>
           </a>
         </div>
       </div>
@@ -305,23 +305,23 @@
         <h1>Gallery</h1>
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-            <img src="/assets/img/haile.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
+            <img src="../assets/img/haile.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
 
-            <img src="/assets/img/haile1.jpg" class="w-100 shadow-1-strong rounded mb-4"
+            <img src="../assets/img/haile1.jpg" class="w-100 shadow-1-strong rounded mb-4"
               alt="Wintry Mountain Landscape" />
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-0">
-            <img src="/assets/img/hailemichael.jpg" class="w-100 shadow-1-strong rounded mb-4"
+            <img src="../assets/img/hailemichael.jpg" class="w-100 shadow-1-strong rounded mb-4"
               alt="Mountains in the Clouds" />
 
-            <img src="/assets/img/image1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
+            <img src="../assets/img/image1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-0">
-            <img src="/assets/img/image2.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
+            <img src="../assets/img/image2.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
 
-            <img src="/assets/img/person1.jpg" class="w-100 shadow-1-strong rounded mb-4"
+            <img src="../assets/img/person1.jpg" class="w-100 shadow-1-strong rounded mb-4"
               alt="Yosemite National Park" />
           </div>
 
