--- a/html/about.html
+++ b/html/about.html
@@ -78,11 +78,12 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Hello 👋</h5>
-      <h1 class="fw-light mb-4">Its <b class="fg-theme">Hailemichael's</b>Portfolio </h1>
-      <div class="badge">A Legal Professional enthusiastic</div>
+      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Hailemicael</b> Argaw</h1>
+      <div class="badge">Lawyer and enthusiastic for Legal-Tech</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
+  
 
   <div class="vg-page page-about" id="about">
     <div class="container py-5">
