--- a/html/blog.html
+++ b/html/blog.html
@@ -77,11 +77,12 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Hello 👋</h5>
-      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Hailemichael </b> Argaw</h1>
+      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Hailemicael</b> Argaw</h1>
       <div class="badge">Lawyer and enthusiastic for Legal-Tech</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
+  
 
 
 
