--- a/html/blog.html
+++ b/html/blog.html
@@ -131,43 +131,13 @@
   <!-- Footer -->
   <div class="vg-footer">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-4 py-3">
-          <div class="footer-info">
-            <p>Where to find me</p>
-            <hr class="divider">
-            <p class="fs-large fg-white">718 Maplewood Ave, Silver Spring 20912, United States</p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 py-3">
-          <div class="float-lg-right">
-            <p>Follow me</p>
-            <hr class="divider">
-            <ul class="list-unstyled">
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Youtube</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 py-3">
-          <div class="float-lg-right">
-            <p>Contact me</p>
-            <hr class="divider">
-            <ul class="list-unstyled">
-              <li>michaelarg50@gmail.com
-              </li>
-              <li>+1 (202) 4248133</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+
       <div class="row justify-content-center mt-3">
 
 
         <div class="col-12">
-          <p class="text-center mb-0 mt-4">&copy;2022. All right reserved </p>
+          <p class="text-center mb-0 mt-4">Copyright &copy;2014. Hailemichael's Portfolio hailemichaelargaw@gmail.com
+          </p>
         </div>
       </div>
     </div>
