portfolio tag added

--- a/blog1.html
+++ b/blog1.html
@@ -17,6 +17,8 @@
         <li><a href="index.html#">Home</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="portfolio.html#portfolio">Portfolio</a></li>
+        <li><a href="expireance.html#expireance">Expireance</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
       <div class="btn">HM</div>
@@ -116,27 +118,27 @@
         </div>
       </div>
     </div>
- <!-- Footer section-->
+    <!-- Footer section-->
   </section>
-      <footer>
-        <p>Hailemichael Demeke Argaw</p>
-        <div class="social">
-          <div class="social-element">
-            <p>Where to find me</p>
-            <p style="text-align: start; color: grey;">718 Maplewood Ave, Silver Spring 20912, United States</p>
-          </div>
-          <div style="display: flex;flex-direction: column;" class="social-element">
-            <p>Follow me</p>
-            <div style="display: flex; flex-direction: row">
-      
-              <a href="#">Facebook</a>
-              <a href="#">Instagram</a>
-              <a href="#">Linkeden</a>
-            </div>
-          </div>
+  <footer>
+    <p>Hailemichael Demeke Argaw</p>
+    <div class="social">
+      <div class="social-element">
+        <p>Where to find me</p>
+        <p style="text-align: start; color: grey;">718 Maplewood Ave, Silver Spring 20912, United States</p>
+      </div>
+      <div style="display: flex;flex-direction: column;" class="social-element">
+        <p>Follow me</p>
+        <div style="display: flex; flex-direction: row">
+
+          <a href="https://www.facebook.com">Facebook</a>
+          <a href="https://www.instagram.com">Instagram</a>
+          <a href="https://www.linkedin.com">Linkedin</a>
         </div>
-        <p class="end">Copyright © 2014 Hailemichael's Portfolio</p>
-      </footer>
+      </div>
+    </div>
+    <p class="end">Copyright © 2014 Hailemichael's Portfolio</p>
+  </footer>
 </body>
 
 </html>
