--- a/blog2.html
+++ b/blog2.html
@@ -17,6 +17,8 @@
         <li><a href="index.html#">Home</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="portfolio.html#portfolio">Portfolio</a></li>
+        <li><a href="expireance.html#expireance">Expireance</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
       <div class="btn">HM</div>
@@ -98,10 +100,10 @@
       <div style="display: flex;flex-direction: column;" class="social-element">
         <p>Follow me</p>
         <div style="display: flex; flex-direction: row">
-  
-          <a href="#">Facebook</a>
-          <a href="#">Instagram</a>
-          <a href="#">Linkeden</a>
+
+          <a href="https://www.facebook.com">Facebook</a>
+          <a href="https://www.instagram.com">Instagram</a>
+          <a href="https://www.linkedin.com">Linkedin</a>
         </div>
       </div>
     </div>
