--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#blog">Blog</a></li>
+				<li><a href="portfolio.html#portfolio">Portfolio</a></li>
+				<li><a href="expireance.html#expireance">Expireance</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<div class="btn">HM</div>
@@ -47,190 +49,7 @@
 				<a href="/assets/CV.pdf"><button type="button">Download CV</button></a>
 			</div>
 		</div>
-		<!-- Education And Expireance-->
 
-		<div class="main">
-			<div class="education">
-				<h2><span>Education</span></h2>
-				<h3><span>2019-2020</span></h3>
-				<div class="education-content">
-					<h5>Master of Laws (LLM) Human Rights, Distinction</h5>
-					<div><span>Swansea University, United Kingdom (UK)</span></div>
-				</div>
-				<h3><span>2009-2014</span></h3>
-				<div class="education-content">
-					<h5>Bachelor of Laws (LLB) (Honors)</h5>
-					<div><span>Debre Markos University, Ethiopia</span></div>
-				</div>
-			</div>
-		</div>
-		<div class="main">
-			<div class="expireance">
-				<h2><span>Expireance</span></h2>
-				<h3>Professional Work Experience</h3>
-				<div class="expireance-content">
-					<table>
-						<thead>
-							<tr>
-								<th>Date</th>
-								<th>Organization</th>
-								<th>Specialization</th>
-								<th>Roll</th>
-							</tr>
-						</thead>
-						<tbody>
-
-							<tr>
-								<td>June 2018-Sept. 2019</td>
-								<td>Lion International Bank SC</td>
-								<td>Attorney</td>
-								<td>
-									<ul>
-										<li>Represented the company in various legal cases</li>
-										<li>Provided legal counseling</li>
-										<li>Reviewed company policy and contracts</li>
-										<li>Settled disputes out of the Court</li>
-										<li>Discharged administrative duties at various governmental levels</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>Sept. 2016-June 2018</td>
-								<td>The Ethiopian Revenues and Customs Authority</td>
-								<td>Legal Officer</td>
-								<td>
-									<ul>
-										<li>Represented the organization in high-profile tax, custom, labor, and other civil law cases</li>
-										<li>Provided legal counseling and legal drafting on administrative decisions, hard and draft laws
-											and
-											cases</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>Oct. 2014-Sept. 2016</td>
-								<td>The Ethiopian Revenues and Customs Authority</td>
-								<td>Public Prosecutor</td>
-								<td>
-									<ul>
-										<li>Led the investigation of tax and custom crimes</li>
-										<li>Prosecutor in tax and custom crimes</li>
-										<li>Provided legal counseling and legal drafting on administrative decisions, hard and draft laws,
-											and
-											cases</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>June 2014-Oct. 2014</td>
-								<td>Debre Markos University Law School</td>
-								<td>Assistant Lecturer</td>
-								<td>
-									<ul>
-										<li>Instructed and taught undergraduate students</li>
-									</ul>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<h3>Voluntary Work Experience</h3>
-				<div class="expireance-content">
-					<table>
-						<thead>
-							<tr>
-								<th>Date</th>
-								<th>Organization</th>
-								<th>Specialization</th>
-								<th>Roll</th>
-							</tr>
-						</thead>
-						<tbody>
-
-							<tr>
-								<td>Dec. 2019</td>
-								<td>Swansea University Law Clinic Drop-in Legal Advice Program</td>
-								<td>Member</td>
-								<td>
-									<ul>
-										<li>Free Legal Advice</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>Dec. 2018-Sept. 2019</td>
-								<td>Lion International Bank Labor Association</td>
-								<td>Member of the Leadership Committee</td>
-								<td>
-									<ul>
-										<li>Founded the Labour Association and delivered effective leadership for the achievement of
-											comprehensive Labor rights</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>March 2017- present</td>
-								<td>The Ethiopian Human Rights Council</td>
-								<td>Member</td>
-								<td>
-									<ul>
-										<li>I supported the organization roles of human rights protection and advocacy</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>2009 – 2014</td>
-								<td>The Ethiopian Orthodox Saint Kidane Miheret Cathedral</td>
-								<td>Member</td>
-								<td>
-									<ul>
-										<li>Managed, coordinated, organized a vast group of volunteer teachers, university, college and high
-											school students, local
-											schools and other members of my community in the deliverance of a Summer Tutorial and Youth
-											Development Program launched
-											by the Sunday School of the Church</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>2009</td>
-								<td>The Anti-Drug and Illicit Trafficking Club of Higher 23 Secondary School</td>
-								<td>Contriubution</td>
-								<td>
-									<ul>
-										<li>I contributed a role in educating the community of students about the harms of drug abuse</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>2009 – 2014</td>
-								<td>The Law Student’s Association of Debre Markos University</td>
-								<td>Member</td>
-								<td>
-									<ul>
-										<li>Provided legal aid to the needy segment of the community</li>
-										<li>Participated in the legal awareness creation activities</li>
-									</ul>
-								</td>
-							</tr>
-							<tr>
-								<td>2009 – 2014</td>
-								<td>Anti-HIV AIDS and Reproductive Health Club</td>
-								<td>Member</td>
-								<td>
-									<ul>
-										<li>I supported the roles of Club in the prevention of HIV AIDS in Debre Markos University and
-											participated in awareness
-											creation on Reproductive Health issues</li>
-									</ul>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-
-			</div>
-		</div>
 	</section>
 
 	<!-----service section start----------->
@@ -274,7 +93,7 @@
 	<div id="contact" class="contact-me">
 		<p>hailemichaelargaw@gmail.com </p>
 		<p>+1 (202) 4248133</p>
-		<a class="button-two" href="mailto:hailemichaelargaw@gmail.com">Send Email</a>
+		<a class="button-two" href="https://mailto:hailemichaelargaw@gmail.com">Send Email</a>
 	</div>
 
 	<!------footer start--------->
@@ -289,9 +108,9 @@
 				<p>Follow me</p>
 				<div style="display: flex; flex-direction: row">
 
-					<a href="#">Facebook</a>
-					<a href="#">Instagram</a>
-					<a href="#">Linkeden</a>
+					<a href="https://www.facebook.com">Facebook</a>
+					<a href="https://www.instagram.com">Instagram</a>
+					<a href="https://www.linkedin.com">Linkedin</a>
 				</div>
 			</div>
 		</div>
