alt attribute established

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<!----About section start---->
 	<section id="about" class="about">
 		<div class="main">
-			<img src="assets/img/image1.jpg">
+			<img src="assets/img/image1.jpg" alt="Img not found">
 			<div class="about-text">
 				<h2><span>About Me</span></h2>
 				<h2>Hailemichael Demeke Argaw</h2>
